--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,105 @@
+body {
+  background-color: #000;
+  color: rgb(255, 255, 255);
+  font-family: 'Courier New', monospace;
+  margin: 20px;
+  padding: 20px;
+
+  /* Neon glow effect */
+  box-shadow: 0 0 3px #ffdd00 inset, /* Inner glow */
+              0 0 5px #ffdd00 inset, /* Medium glow */
+              0 0 8px #ffdd00 inset, /* Outer glow */
+              0 0 10px #ffdd00 inset; /* Very outer glow */
+}
+
+img {
+  border: 2px solid rgb(255, 255, 255);
+}
+
+a {
+  color: #0f0;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.popupCell {
+  max-width: 200px;
+  max-height: 100px;
+  border: 1px solid #0f0;
+  padding: 10px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 10px;
+}
+
+th, td {
+  border: 1px solid #0f0;
+  padding: 8px;
+  text-align: left;
+}
+
+div.meme-container {
+  position: fixed;
+  transform: translateX(-50%);
+  z-index: 10000;
+  max-width: 98%;
+  max-height: 98%;
+  overflow: hidden;
+}
+
+button {
+  background-color: rgb(255, 242, 0);
+  color: #000;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-family: 'Courier New', monospace;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #080;
+}
+
+
 .popupCell img {
-    max-width: 100%;
-    max-height: 100%;
+    height: 100%;
+    width: auto;
     display: block;
     object-fit: contain; /* Keeps aspect ratio */
   }
-  .popupCell {
-    max-width: 200px;
-    max-height: 100px;
+.popupCell {
+    height: 100px;
+    width: auto;
   }
+
+input {
+  background-color: #000;
+  color: #0f0;
+  border: 1px solid #0f0;
+  padding: 10px 20px;
+  font-family: 'Courier New', monospace;
+  transition: background-color 0.3s ease;
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#domain,
+#memeFile {
+  margin-right: 5px;
+  margin-bottom: 10px;
+}
+
   
   
